# inferlylens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: quality-checks.yaml
datasets/: README.md  airfoil.parquet  banana.parquet
docs/: api.rst  conf.py  index.rst  old_quick_start.ipynb  quick_start.pct.py  quick_start_old.ipynb
docs/_build/doctrees/: api.doctree  designs_of_experiments.doctree  environment.pickle  index.doctree  quick_start.doctree
docs/_build/html/: .buildinfo  api.html  designs_of_experiments.html  genindex.html  index.html  objects.inv  py-modindex.html  quick_start.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/inferlyclient/data/: data.html  doe.html  plot.html  transform.html
docs/_build/html/_modules/inferlyclient/models/: gpmodel.html  metrics.html  plots.html
docs/_build/html/_modules/inferlycore/data/: data.html  doe.html
docs/_build/html/_sources/: api.rst  designs_of_experiments.ipynb  index.rst  quick_start.ipynb
docs/_build/jupyter_execute/: designs_of_experiments.ipynb  quick_start.ipynb
docs/_static/: style.css
inferlyclient/: __init__.py
inferlyclient/data/: __init__.py  data.py  doe.py  plot.py
inferlyclient/models/: gpmodel.py  metrics.py  plots.py
inferlylens/: __init__.py  config.py  types.py
inferlylens/data/: __init__.py  data.py  plots.py  transforms.py
inferlylens/models/: __init__.py  gpmodel.py  metrics.py  plots.py
src/inferlylens/: config.py  types.py
src/inferlylens/data/: doe.py  plots.py
src/inferlylens/models/: gpmodel.py  plots.py
tests/: test_data.py  test_doe.py  test_transform.py  utils.py
tests/data/: test_data.py  test_doe.py  test_plot.py  test_transform.py
tests/models/: test_gpmodel.py  test_metrics.py  test_plots.py
