[project]
name = "inferlylens"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [
    { name = "Nicolas Durrande", email = "nicolas@inferly.ai" }
]

dependencies = [
    "numpy>=2.0",
    "scipy>=1.10",
    "pandas>=2.0.1",
    "fastparquet>=2023.2.0",
    "plotly>=5.15.0",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "gpflow>=2.5.2",
]

[dependency-groups]
dev = [
    "ipython>=8.12.0",
    "taskipy>=1.2.0",
    "pytest>=7.0.1",
    "jupyterlab>=3.3.1",
    "jupytext>=1.14.0",
    "ruff>=0.0.263",
    "pyright>=1.1.336",
    "coverage>=7.3.2",
]

doc = [
    "sphinx-book-theme>=1.0.1",
    "sphinx-autoapi>=2.1.0",
    "importlib-metadata>=6.6.0",
    "nbsphinx>=0.9.1",
    "sphinx-copybutton>=0.5.2",
    "sphinxext-opengraph>=0.8.2",
    "sphinx-autodoc-typehints>=1.23.0",
    "myst-nb>=0.17.2",
    "sphinx-remove-toctrees>=0.0.3",
]


[build-system]
requires = ["uv_build>=0.9.9"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev"]

[tool.taskipy.tasks]
test = "coverage run -m pytest -v -x --ff -rN -Wignore -s --tb=short --durations=10 tests; coverage report; coverage xml"
check = "ruff check .; ruff format --check ."
format = "ruff check --fix .; ruff format ."
doc = "cd docs; make html"


[tool.pyright]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = true
useLibraryCodeForTypes = false


[tool.ruff]
line-length = 110
lint.select = [
    "A",
    "C4",
    "F",
    "E", "W",
    "I",
    "D",
    "N",
    "UP",
    "RET501", "RET502", "RET503", "RET504",
    "SIM",
    "PL",
    "PIE",
    "ARG",
    "RUF001", "RUF002", "RUF003",
    "B026",
    "RUF100",
]
lint.ignore = [
    "C408",
    "D100",
    "D104",
    "D107",
    "D401",
    "N803",
    "N806",
    "PLR2004",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
